--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "pkgw",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "build": 0,
   "description": "package.json writer",
   "main": "index.js",
   "bin": {
-    "pkgw": "./cli.js"
+    "pkgw": "./cli.js",
+    "pkg": "./cli.js",
+    "pk": "./cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
