--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "bin": {
     "pkgw": "./cli.js",
     "pkg": "./cli.js",
-    "pk": "./cli.js"
+    "pk": "./cli.js",
+    "pp": "./cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
